updating the details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Software Tester</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Maple Grove, MN.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Motorcycle Racing, Video Game Design.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Designing/Developing my game project.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in St. Paul, MN</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It is a field that is of interest to me and something that I tend to be somewhat naturally good at.</p>
     </section>
 
     <footer id="footer">
